--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -177,7 +177,7 @@ x-shared-env: &shared-api-worker-env
 services:
   # API service
   api:
-    image: langgenius/dify-api:0.6.14
+    image: ghcr.io/iguanesolutions/dify:0.6.14
     restart: always
     environment:
       # Use the shared environment variables.
@@ -197,7 +197,7 @@ services:
   # worker service
   # The Celery worker for processing the queue.
   worker:
-    image: langgenius/dify-api:0.6.14
+    image:  ghcr.io/iguanesolutions/dify:0.6.14
     restart: always
     environment:
       # Use the shared environment variables.
